feat: finish about section

--- a/index.html
+++ b/index.html
@@ -28,11 +28,60 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              you're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laboriosam, incidunt? Est alias magnam et accusantium maiores
+              inventore eveniet, iusto nobis laboriosam veniam neque rem
+              blanditiis voluptatem quaerat cum doloremque nam?
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Cupiditate omnis, dolorum aut quaerat
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr; </a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src="img/nat-1-large.jpg"
+                alt="photo 1"
+                class="composition__photo composition__photo--p1"
+              /><img
+                src="img/nat-2-large.jpg"
+                alt="photo 2"
+                class="composition__photo composition__photo--p2"
+              /><img
+                src="img/nat-3-large.jpg"
+                alt="photo 3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
-    <section class="grid-test">
-      <div class="row">
-        <div class="col-1-of-2">Col 1 of 2</div>
-        <div class="col-1-of-2">Col 1 of 2</div>
+    <!-- a grid system to use if you need it 
+
+      <section class="grid-test">
+        <div class="row">
+          <div class="col-1-of-2">Col 1 of 2</div>
+          <div class="col-1-of-2">Col 1 of 2</div>
       </div>
       <div class="row">
         <div class="col-1-of-3">Col 1 of 3</div>
@@ -58,6 +107,6 @@
         <div class="col-1-of-4">Col 1 of 4</div>
         <div class="col-3-of-4">Col 3 of 4</div>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
