--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
             <p class="paragraph">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Laboriosam, incidunt? Est alias magnam et accusantium maiores
-              inventore eveniet, iusto nobis laboriosam veniam neque rem
-              blanditiis voluptatem quaerat cum doloremque nam?
+              inventore eveniet.
             </p>
             <h3 class="heading-tertiary u-margin-bottom-small">
               live adventures like you never have before
@@ -70,6 +69,58 @@
                 alt="photo 3"
                 class="composition__photo composition__photo--p3"
               />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Explicabo eaque totam Lorem, ipsum dolor.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Meet nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Explicabo eaque totam Lorem, ipsum dolor.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Find your way
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Explicabo eaque totam Lorem, ipsum dolor.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                live a healthier life
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Explicabo eaque totam Lorem, ipsum dolor.
+              </p>
             </div>
           </div>
         </div>
