--- a/index.html
+++ b/index.html
@@ -18,27 +18,30 @@
   <body>
     <div class="navigation">
       <input type="checkbox" id="navi-toggle" class="navigation__checkbox" />
-      <label for="navi-toggle" class="navigation__button">Menu</label>
+      <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
       <div class="navigation__background">&nbsp;</div>
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
-              ><span>01</span> About Natours</a
-            >
+            <a href="#" class="navigation__link">
+              <span>01</span>
+              About Natours
+            </a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
-              ><span>02</span> Your benfits</a
-            >
+            <a href="#" class="navigation__link">
+              <span>02</span> Your benfits
+            </a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
-              ><span>03</span> popular tours</a
-            >
+            <a href="#" class="navigation__link">
+              <span>03</span> popular tours
+            </a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>04</span> Stories</a>
+            <a href="#" class="navigation__link"> <span>04</span> Stories </a>
           </li>
           <li class="navigation__item">
             <a href="#" class="navigation__link"><span>05</span> Book Now</a>
