feat: finished the popup layout

--- a/index.html
+++ b/index.html
@@ -431,6 +431,34 @@
         </div>
       </div>
     </footer>
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Semper
+            eget duis at tellus at urna condimentum mattis pellentesque. Cursus
+            euismod quis viverra nibh cras. Integer vitae justo eget magna. Nisl
+            suscipit adipiscing bibendum est ultricies. Mollis aliquam ut
+            porttitor leo a diam sollicitudin. Est ultricies integer quis auctor
+            elit sed vulputate mi. Ullamcorper sit amet risus nullam eget felis
+            eget nunc lobortis. Sollicitudin tempor id eu nisl nunc mi ipsum
+            faucibus. Urna neque viverra justo nec.
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
 
     <!-- a grid system to use if you need it 
 
